Fix sorting order

Apparently the result of std::sort() differs under Windows and Linux if
all sort criteria are identical. Adding the split ID as the last
criterion solves the problem.

BUG: 498031
FIXED-IN: 5.2